--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="profile_name">
           Abhi Tyagi
           <div class="contact_info">
-            <img src="profile assets/icons8-circled-envelope-48.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="profile_assets/icons8-circled-envelope-48.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           Atyagi@hotmail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="profile assets/icons8-call.gif" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          <img src="profile_assets/icons8-call.gif" alt="https://icons8.com/icon/124377/circled-envelope"/>
           +15413267894
 
         </div>
@@ -37,7 +37,7 @@
     <section id="about-me" class="container">
       <div>
         <!--img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/-->
-        <img src="profile assets/profile.gif" class="profile_image"/>
+        <img src="profile_assets/profile.gif" class="profile_image"/>
       </div>
 
       <div>
@@ -60,37 +60,37 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="profile assets/html5.png"/>
+          <img src="profile_assets/html5.png"/>
           <h6>HTML</h6>
           <p>2 years experience</p>
         </div>  
 
         <div class="skill">
-          <img src="profile assets/js.jpeg"/>
+          <img src="profile_assets/js.jpeg"/>
           <h6>JavaScript</h6>
           <p>3 years experience</p>
         </div>  
 
         <div class="skill">
-            <img src="profile assets/java.png"/>
+            <img src="profile_assets/java.png"/>
             <h6>Java</h6>
             <p>5 years experience</p>
         </div>
 
         <div class="skill">
-            <img src="profile assets/node.png"/>
+            <img src="profile_assets/node.png"/>
             <h6>Node.js</h6>
             <p>1 year experience</p>
         </div>
 
         <div class="skill">
-            <img src="profile assets/react.png"/>
+            <img src="profile_assets/react.png"/>
             <h6>React.js</h6>
             <p>1 year experience</p>
         </div>
 
         <div class="skill">
-            <img src="profile assets/CSS3.png"/>
+            <img src="profile_assets/CSS3.png"/>
             <h6>CSS</h6>
             <p>2 years experience</p>
         </div>
@@ -183,7 +183,7 @@
     </div>
 
     <div class="popup" id="popup" class="flex_center">
-      <img src="profile assets/checkmark--outline.svg"/>
+      <img src="profile_assets/checkmark--outline.svg"/>
       <h3><!-- Add appropriate text here-->
           Thanks for your recommendation!&#128522
       </h3>
